Add GameMode, Instace, Players plain classes. Gamemode sets camera position

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,8 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/Chess_BasicMap.Chess_BasicMap
 EditorStartupMap=/Game/Maps/Chess_BasicMap.Chess_BasicMap
+GlobalDefaultGameMode=/Game/Blueprints/BP_ChessGameMode.BP_ChessGameMode_C
+GameInstanceClass=/Script/chess.Chess_GameInstance
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
