--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Chess_BasicMap.Chess_BasicMap
-EditorStartupMap=/Game/Maps/Chess_BasicMap.Chess_BasicMap
+GameDefaultMap=/Game/Maps/Chess_VoidMap.Chess_VoidMap
+EditorStartupMap=/Game/Maps/Chess_VoidMap.Chess_VoidMap
 GlobalDefaultGameMode=/Game/Blueprints/BP_ChessGameMode.BP_ChessGameMode_C
 GameInstanceClass=/Script/chess.Chess_GameInstance
 
@@ -206,4 +206,7 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/UnrealEd.CookerSettings]
+bCookOnTheFlyForLaunchOn=True
 
