Add Main menu UI and Fix click to eat opponent piecee

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,10 +1,19 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Chess_VoidMap.Chess_VoidMap
-EditorStartupMap=/Game/Maps/Chess_VoidMap.Chess_VoidMap
-GlobalDefaultGameMode=/Game/Blueprints/BP_ChessGameMode.BP_ChessGameMode_C
+EditorStartupMap=/Game/Maps/Chess_MainMenuMap.Chess_MainMenuMap
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/chess.Chess_GameInstance
+GameDefaultMap=/Game/Maps/Chess_MainMenuMap.Chess_MainMenuMap
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Blueprints/BP_ChessGameMode.BP_ChessGameMode_C
+GlobalDefaultServerGameMode=None
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
