--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Chess_MainMenuMap.Chess_MainMenuMap
+EditorStartupMap=/Game/Maps/Chess_VoidMap.Chess_VoidMap
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/chess.Chess_GameInstance
-GameDefaultMap=/Game/Maps/Chess_MainMenuMap.Chess_MainMenuMap
+GameDefaultMap=/Game/Maps/Chess_VoidMap.Chess_VoidMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/BP_ChessGameMode.BP_ChessGameMode_C
 GlobalDefaultServerGameMode=None
