--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,12 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=44D179674A075855203293BAA4626F3F
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "60C84357401C55FDD44FDBAA2310923D", "Chess.me")
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
